[package]
name = "rsxc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-rsx"
test = false
path = "src/main.rs"

[[bin]]
name = "rsx-driver"
path = "src/driver.rs"

[dependencies]
anstream = "0.6.4"
color-print = "0.3.5"
rustc_tools_util = "0.3.0"

[build-dependencies]
rustc_tools_util = "0.3.0"

[package.metadata.rust-analyzer]
rustc_private = true
